--- a/docs/docs/types/point.mdx
+++ b/docs/docs/types/point.mdx
@@ -1,8 +1,8 @@
 ---
-title: Box Annotations
+title: Point Annotations
 ---
 
-Box annotations are used to draw rectangles on the chart area. This can be useful for highlighting different areas of a chart.
+Point annotations are used to mark points on the chart area. This can be useful for highlighting values that are of interest.
 
 import { useEffect } from 'react';
 
@@ -32,12 +32,10 @@ export const ExampleChart = () => {
         plugins: {
           annotation: {
             annotations: {
-              box1: {
-                type: 'box',
-                xMin: 1,
-                xMax: 2,
-                yMin: 50,
-                yMax: 70,
+              point1: {
+                type: 'point',
+                xValue: 1,
+                yValue: 60,
                 backgroundColor: 'rgba(255, 99, 132, 0.25)'
               }
             }
@@ -55,7 +53,7 @@ export const ExampleChart = () => {
 
 ## Configuration
 
-The following options are available for box annotations.
+The following options are available for ellipse annotations.
 
 | Name | Type | [Scriptable](../options#scriptable-options) | Default
 | ---- | ---- | :----: | ----
@@ -63,20 +61,18 @@ The following options are available for box annotations.
 | [`drawTime](#general) | `string` | Yes | `'afterDatasetsDraw'`
 | [`xScaleID`](#general) | `string` | Yes | `'x'`
 | [`yScaleID`](#general) | `string` | Yes | `'y'`
-| [`xMin`](#general) | `number` | Yes | `undefined`
-| [`xMax`](#general) | `number` | Yes | `undefined`
-| [`yMin`](#general) | `number` | Yes | `undefined`
-| [`YMax`](#general) | `number` | Yes | `undefined`
+| [`xValue`](#general) | `number` | Yes | `undefined`
+| [`yValue`](#general) | `number` | Yes | `undefined`
+| [`radius](#general) | `number` | Yes | `10`
 | [`borderColor`](#styling) | [`Color`](../optionsd#color) | Yes | `options.color`
 | [`borderWidth`](#styling) | `number`| Yes | `1`
 | [`borderDash`](#styling) | `number[]`| Yes | `[]`
 | [`borderDashOffset`](#styling) | `number`| Yes | `0`
 | [`backgroundColor`](#styling) | [`Color`](../options#color) | Yes | `options.color`
-| [`cornerRadius`](#styling) | `number` | Yes | `0`
 
 ### General
 
-If one of the axes does not match an axis in the chart, the box will take the entire chart dimension. The 4 coordinates, xMin, xMax, yMin, yMax are optional. If not specified, the box is expanded out to the edges in the respective direction.
+If one of the axes does not match an axis in the chart, the ellipse will take the entire chart dimension. The 4 coordinates, xMin, xMax, yMin, yMax are optional. If not specified, the ellipse is expanded out to the edges in the respective direction.
 
 | Name | Description |
 | ---- | ---- |
@@ -84,10 +80,9 @@ If one of the axes does not match an axis in the chart, the box will take the en
 | `drawTime` | See [drawTime]('../options#draw-time)
 | `xScaleID` | ID of the X scale to bind onto, default is 'x'.
 | `yScaleID` | ID of the Y scale to bind onto, default is 'y'.
-| `xMin` | Left edge of the box in units along the x axis.
-| `xMax` | Right edge of the box in units along the x axis.
-| `yMin` | Top edge of the box in units along the y axis.
-| `yMax` | Bottom edge of the box in units along the y axis.
+| `xValue` | X coordinate of the point in units along the x axis.
+| `yValue` | Y coordinate of the point in units along the y axis.
+| `radius` | Size of the point in pixels
 
 ### Styling
 
@@ -98,4 +93,3 @@ If one of the axes does not match an axis in the chart, the box will take the en
 | `borderDash` | Length and spacing of dashes. See [MDN](https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/setLineDash).
 | `borderDashOffset` | Offset for line dashes. See [MDN](https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/lineDashOffset).
 | `backgroundColor` | Fill color
-| `cornerRadius` | Radius of box rectangle
