Line annotation documented

--- a/docs/docs/options.mdx
+++ b/docs/docs/options.mdx
@@ -7,6 +7,10 @@ import { useEffect } from 'react';
 
 Any color supported by [chart.js](https://www.chartjs.org/docs/master/general/colors) is supported by the annotation plugin.
 
+## Font
+
+Fonts use the same format as [chart.js](https://www.chartjs.org/docs/master/general/fonts).
+
 ## Scriptable Options
 
 As with most options in chart.js, the annotation plugin options are scriptable. This means that a function can be passed which returns the value as needed. In the example below, the annotation is hidden when the screen is less than 1000px wide
