Fix broken links

--- a/docs/docs/types/box.mdx
+++ b/docs/docs/types/box.mdx
@@ -67,7 +67,7 @@ The following options are available for box annotations.
 | [`xMax`](#general) | `number` | Yes | `undefined`
 | [`yMin`](#general) | `number` | Yes | `undefined`
 | [`YMax`](#general) | `number` | Yes | `undefined`
-| [`borderColor`](#styling) | [`Color`](../optionsd#color) | Yes | `options.color`
+| [`borderColor`](#styling) | [`Color`](../options#color) | Yes | `options.color`
 | [`borderWidth`](#styling) | `number`| Yes | `1`
 | [`borderDash`](#styling) | `number[]`| Yes | `[]`
 | [`borderDashOffset`](#styling) | `number`| Yes | `0`
@@ -81,7 +81,7 @@ If one of the axes does not match an axis in the chart, the box will take the en
 | Name | Description |
 | ---- | ---- |
 | `display` | Whether or not this annotation is visible
-| `drawTime` | See [drawTime]('../options#draw-time)
+| `drawTime` | See [drawTime](../options#draw-time)
 | `xScaleID` | ID of the X scale to bind onto, default is 'x'.
 | `yScaleID` | ID of the Y scale to bind onto, default is 'y'.
 | `xMin` | Left edge of the box in units along the x axis.
