--- a/docs/docs/types/point.mdx
+++ b/docs/docs/types/point.mdx
@@ -64,7 +64,7 @@ The following options are available for ellipse annotations.
 | [`xValue`](#general) | `number` | Yes | `undefined`
 | [`yValue`](#general) | `number` | Yes | `undefined`
 | [`radius](#general) | `number` | Yes | `10`
-| [`borderColor`](#styling) | [`Color`](../optionsd#color) | Yes | `options.color`
+| [`borderColor`](#styling) | [`Color`](../options#color) | Yes | `options.color`
 | [`borderWidth`](#styling) | `number`| Yes | `1`
 | [`borderDash`](#styling) | `number[]`| Yes | `[]`
 | [`borderDashOffset`](#styling) | `number`| Yes | `0`
@@ -77,7 +77,7 @@ If one of the axes does not match an axis in the chart, the ellipse will take th
 | Name | Description |
 | ---- | ---- |
 | `display` | Whether or not this annotation is visible
-| `drawTime` | See [drawTime]('../options#draw-time)
+| `drawTime` | See [drawTime](../options#draw-time)
 | `xScaleID` | ID of the X scale to bind onto, default is 'x'.
 | `yScaleID` | ID of the Y scale to bind onto, default is 'y'.
 | `xValue` | X coordinate of the point in units along the x axis.
